--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <section class="first-section">
             <div class="container">
 <h1 class="first-h">Effective Solutions for Your Business</h1>
-<button type="button" class="button">Order Service</button>
+<button type="button" class="button" data-modal-open>Order Service</button>
             </div>
         </section>
         <!--Друга секція-->
@@ -346,5 +346,13 @@
         </div>
         </div>
     </footer>
+    <div class="modal-section is-hidden" data-modal>
+        <div class="modal-window">
+            <button type="button" data-modal-close class="modal-button-close">
+                <svg class="modal-icon-close mod-ic-close" width="8" height="8">
+                    <use href="./images/icons.svg#icon-close-black"></use>
+                </svg>
+            </button>
+    <script src="./js/modal.js"></script>
 </body>
 </html>
